# ascent_classic

./: .svn.ignore.global  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  README-WINDOWS.txt  TERM OF USE AGREEMENT  ascent-tag  configure.ac  extract_svn_revision.h  extract_svn_revision.sh  freebsd_autotools.sh  make_precompiled_header.sh  make_precompiled_header_debug.sh
dep/src/gm/: Makefile.am  gmByteCode.cpp  gmByteCodeGen.cpp  gmCodeGen.cpp  gmCodeGen.h  gmCodeTree.cpp  gmConfig_p.h  gmConfig_p_gcc.h  gmFunctionObject.h  gmGCRoot.h  gmGCRootUtil.h  gmIncGC.h  gmMachine.cpp  gmMachine.h  gmMachineLib.cpp  gmParser.cpp  gmStringObject.h  gmTableObject.h  gmThread.cpp  gmThread.h  gmUserObject.h  gmVariable.h
dep/src/gm/doc/: ChangeLog.txt
dep/src/pcre/: Makefile.am
src/ascent/: BaseConsole.h  CConsole.cpp  CConsole.h  ConsoleCommands.cpp  ConsoleCommands.h  ConsoleListener.cpp  Main.cpp  MainServerDefines.h  Makefile.am  Master.cpp  Master.h  usewinhoard.cpp
src/ascent-logonserver/: AccountCache.cpp  AccountCache.h  AuthSocket.cpp  AuthSocket.h  AuthStructs.h  AutoPatcher.cpp  AutoPatcher.h  LogonCommServer.cpp  LogonCommServer.h  LogonConsole.cpp  LogonConsole.h  LogonOpcodes.cpp  LogonOpcodes.h  LogonStdAfx.cpp  LogonStdAfx.h  Main.cpp  Main.h  Makefile.am  PeriodicFunctionCall_Thread.h
src/ascent-realmserver/: CharacterHandler.cpp  ClientManager.cpp  ClientManager.h  ClusterManager.cpp  ClusterManager.h  LogonCommClient.cpp  LogonCommClient.h  LogonCommHandler.cpp  LogonCommHandler.h  Makefile.am  Master.cpp  Master.h  ObjectStorage.cpp  ObjectStorage.h  QueryHandler.cpp  RStdAfx.cpp  RStdAfx.h  Session.cpp  Session.h  Structures.h  WorkerOpcodes.h  WorkerServer.cpp  WorkerServer.h  WorkerServerSocket.cpp  WorkerServerSocket.h  WorldSocket.cpp  WorldSocket.h
src/ascent-voicechat/: ConfigReader.c  Main.c  Makefile.am  VoiceChat.c  VoiceChat.h  ascent_opcodes.h  ascent_packet.h  ascent_socket.c  common.h  configfile.c  configfile.h  launcher.c  linkedlist.h  log.c  log.h  mutex.c  mutex.h  network.h  network_handlers.c  network_handlers.h  network_unixepoll.c  network_unixkqueue.c  network_unixselect.c  network_win32.c  voice_channel.c  voice_channel.h  voice_channelmgr.h  voice_socket.c
src/game/: AIAHealSuport.cpp  AIAHealSuport.h  AIAHealSupport.cpp  AIAHealSupport.h  AIInterface.cpp  AIInterface.h  AddonMgr.cpp  AddonMgr.h  AlteracValley.h  ArathiBasin.cpp  ArathiBasin.h  AreaTrigger.cpp  AreaTrigger.h  ArenaTeam.cpp  ArenaTeam.h  Arenas.cpp  Arenas.h  AuctionHouse.cpp  AuctionHouse.h  AuctionMgr.cpp  AuctionMgr.h  BattlegroundCommands.cpp  BattlegroundHandler.cpp  BattlegroundMgr.cpp  BattlegroundMgr.h  CThreads.cpp  CThreads.h  CellHandler.h  Channel.cpp  Channel.h  ChannelHandler.cpp  ChannelMgr.h  CharacterHandler.cpp  Chat.cpp  Chat.h  ChatHandler.cpp  ClusterInterface.cpp  ClusterInterface.h  CollideInterface.cpp  CollideInterface.h  (+160 more)
src/game/collision/: Collision.h  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  Tile.cpp  Tile.h  TileManager.cpp  TileManager.h
src/logonserver/: AccountCache.cpp  AccountCache.h  AuthSocket.cpp  AuthSocket.h  AuthStructs.h  AutoPatcher.cpp  AutoPatcher.h  LogonCommServer.cpp  LogonCommServer.h  LogonConsole.cpp  LogonConsole.h  LogonOpcodes.cpp  LogonOpcodes.h  LogonStdAfx.cpp  LogonStdAfx.h  Main.cpp  Main.h  Makefile.am  PeriodicFunctionCall_Thread.h  RealmlistThreadMgr.cpp
src/scripts/src/AngelScriptScripting/: AngelScriptEngine.cpp  AngelScriptEngine.h  AngelScriptFunctions.h  Makefile.am
src/scripts/src/AngelScriptScripting/angelscript/include/: angelscript.h
src/scripts/src/AngelScriptScripting/angelscript/source/: as_array.h  as_builder.cpp  as_builder.h  as_bytecode.cpp  as_callfunc.cpp  as_callfunc.h  as_callfunc_mips.cpp  (+45 more)
src/scripts/src/GossipScripts/: Gossip_Battlemaster.cpp  Gossip_Innkeepers.cpp  GuardGossip.cpp  Makefile.am  Setup.cpp  Setup.h
src/scripts/src/InstanceScripts/: Battleground_AlteracValley.cpp  Instance_Deadmines.cpp  Makefile.am  Raid_BlackwingLair.cpp  Raid_MoltenCore.cpp  Raid_Naxxramas.cpp  Raid_OnyxiasLair.cpp  Raid_ZulGurub.cpp  Setup.cpp  Setup.h
src/scripts/src/ServerStatusPlugin/: Makefile.am  PerfCounters.h  ServerStatusPlugin.cpp
src/scripts/src/SpellHandlers/: Event_MidsummerFireFestival.cpp  ItemSpells_1.cpp  MageSpells.cpp  Makefile.am  PaladinSpells.cpp  RogueSpells.cpp  Setup.cpp  Setup.h  ShamanSpells.cpp  WarriorSpells.cpp
src/scripts/src/WorldPvPScripts/: Makefile.am  Setup.cpp  ZoneHellfirePeninsula.cpp
src/shared/: AscentConfig.h  AuthCodes.h  ByteBuffer.h  CallBack.cpp  CallBack.h  CircularQueue.h  Common.h  CrashHandler.cpp  CrashHandler.h  Errors.h  FastQueue.h  LocationVector.h  Log.cpp  Log.h  Makefile.am  MemoryLeaks.cpp  MemoryLeaks.h  MersenneTwister.cpp  MersenneTwister.h  NGLog.h  PreallocatedQueue.h  Singleton.h  StackBuffer.h  StackWalker.cpp  StackWalker.h  Storage.h  Timer.h  Util.cpp  Util.h  WoWGuid.h  ascent_getopt.cpp  ascent_getopt.h  svn_revision.h  usewinhoard.cpp
src/shared/Auth/: BigNumber.cpp  BigNumber.h  MD5.cpp  MD5.h  Sha1.cpp  Sha1.h  WowCrypt.cpp  WowCrypt.h  md5_impl.c  md5_impl.h  sha1_impl.c  sha1_impl.h
src/shared/Config/: Config.cpp  Config.h  ConfigEnv.h
src/shared/Database/: DBC.cpp  DBC.h  DBCStores.cpp  DBCStores.h  DataStore.h  Database.cpp  Database.h  DatabaseEnv.h  Field.h  dbcfile.cpp  dbcfile.h
src/shared/Database/impl/: MySQLDatabase.cpp  MySQLDatabase.h  PostgreDatabase.cpp  PostgreDatabase.h
src/shared/Network/: ListenSocketFreeBSD.h  ListenSocketLinux.h  ListenSocketSelect.h  ListenSocketWin32.h  Network.h  Socket.cpp  Socket.h  SocketDefines.h  SocketFreeBSD.cpp  SocketLinux.cpp  SocketMgrFreeBSD.cpp  SocketMgrFreeBSD.h  SocketMgrLinux.cpp  SocketMgrLinux.h  SocketMgrPoll.cpp  SocketMgrSelect.cpp  SocketMgrSelect.h  SocketMgrWin32.cpp  SocketMgrWin32.h  SocketOpsSelect.cpp  SocketPoll.cpp  SocketSelect.cpp  SocketWin32.cpp
src/shared/Threading/: Condition.h  Guard.h  LockedQueue.h  Mutex.cpp  Mutex.h  Queue.h  RWLock.h  ThreadPool.cpp  ThreadPool.h  ThreadStarter.h  Threading.h
(+804 files in other folders)
