## Process this file with automake to produce Makefile.in

EXTRA_DIST = reconf configure
SUBDIRS = dep src

EXTRA_DIST += win/ascentVC71.sln win/VC71/ascent.vcproj \
              win/VC71/game.vcproj win/VC71/realmlist.vcproj \
              win/VC71/redirect.vcproj win/VC71/shared.vcproj

EXTRA_DIST += dep/lib/libmysqlclient.a dep/lib/libmySQLmingw.a
EXTRA_DIST += dep/lib/debug/libmySQL.dll dep/lib/debug/libmySQL.lib
EXTRA_DIST += dep/lib/release/libmySQL.dll dep/lib/release/libmySQL.lib

# MYSQL heaers
EXTRA_DIST += dep/include/mysql/config-win.h dep/include/mysql/dbug.h \
              dep/include/mysql/errmsg.h dep/include/mysql/libmysqld.def \
              dep/include/mysql/Libmysql.def dep/include/mysql/m_ctype.h \
              dep/include/mysql/m_string.h dep/include/mysql/my_alloc.h \
              dep/include/mysql/my_getopt.h dep/include/mysql/my_global.h \
              dep/include/mysql/my_list.h dep/include/mysql/my_pthread.h \
              dep/include/mysql/mysql_com.h dep/include/mysql/mysqld_error.h \
              dep/include/mysql/mysql.h dep/include/mysql/mysql_version.h \
              dep/include/mysql/my_sys.h dep/include/mysql/raid.h

EXTRA_DIST += dep/include/openssl/aes.h dep/include/openssl/blowfish.h  \
              dep/include/openssl/conf.h dep/include/openssl/dh.h \
              dep/include/openssl/ec.h dep/include/openssl/idea.h \
              dep/include/openssl/md4.h dep/include/openssl/ocsp.h \
              dep/include/openssl/pem2.h dep/include/openssl/rc4.h \
              dep/include/openssl/sha.h dep/include/openssl/stack.h \
              dep/include/openssl/ui.h dep/include/openssl/asn1.h \
              dep/include/openssl/bn.h dep/include/openssl/conf_api.h \
              dep/include/openssl/dsa.h dep/include/openssl/engine.h \
              dep/include/openssl/krb5_asn.h  dep/include/openssl/md5.h \
              dep/include/openssl/opensslconf.h  dep/include/openssl/pkcs12.h \
              dep/include/openssl/rc5.h dep/include/openssl/ssl.h \
              dep/include/openssl/symhacks.h dep/include/openssl/ui_compat.h \
              dep/include/openssl/asn1_mac.h dep/include/openssl/buffer.h \
              dep/include/openssl/crypto.h dep/include/openssl/dso.h \
              dep/include/openssl/err.h dep/include/openssl/kssl.h \
              dep/include/openssl/mdc2.h dep/include/openssl/opensslv.h \
              dep/include/openssl/pkcs7.h dep/include/openssl/ripemd.h \
              dep/include/openssl/ssl2.h dep/include/openssl/tls1.h \
              dep/include/openssl/x509.h dep/include/openssl/asn1t.h \
              dep/include/openssl/cast.h dep/include/openssl/des.h \
              dep/include/openssl/e_os2.h dep/include/openssl/evp.h \
              dep/include/openssl/lhash.h dep/include/openssl/obj_mac.h \
              dep/include/openssl/ossl_typ.h dep/include/openssl/rand.h \
              dep/include/openssl/rsa.h dep/include/openssl/ssl23.h \
              dep/include/openssl/tmdiff.h dep/include/openssl/x509_vfy.h \
              dep/include/openssl/bio.h dep/include/openssl/comp.h \
              dep/include/openssl/des_old.h dep/include/openssl/ebcdic.h \
              dep/include/openssl/hmac.h dep/include/openssl/md2.h \
              dep/include/openssl/objects.h dep/include/openssl/pem.h \
              dep/include/openssl/rc2.h dep/include/openssl/safestack.h \
              dep/include/openssl/ssl3.h dep/include/openssl/txt_db.h \
              dep/include/openssl/x509v3.h
