INCLUDES += -I$(srcdir)/../../include -I$(srcdir)/../../include/zlib -I.

noinst_LIBRARIES = libgmscript.a

libgmscript_a_SOURCES = \
gmArrayLib.cpp \
gmArraySimple.cpp \
gmByteCode.cpp \
gmByteCodeGen.cpp \
gmCall.cpp \
gmCodeGen.cpp \
gmCodeGenHooks.cpp \
gmCodeTree.cpp \
gmCrc.cpp \
gmDebug.cpp \
gmFunctionObject.cpp \
gmGCRoot.cpp \
gmGCRootUtil.cpp \
gmHash.cpp \
gmHelpers.cpp \
gmIncGC.cpp \
gmLibHooks.cpp \
gmListDouble.cpp \
gmLog.cpp \
gmMachine.cpp \
gmMachineLib.cpp \
gmMathLib.cpp \
gmMem.cpp \
gmMemChain.cpp \
gmMemFixed.cpp \
gmMemFixedSet.cpp \
gmOperators.cpp \
gmParser.cpp \
gmScanner.cpp \
gmStream.cpp \
gmStreamBuffer.cpp \
gmStringLib.cpp \
gmStringObject.cpp \
gmTableObject.cpp \
gmThread.cpp \
gmUserObject.cpp \
gmUtil.cpp \
gmVariable.cpp \
gmVector3Lib.cpp


