INCLUDES += -I$(srcdir)/../../include -I$(srcdir)/../../include/zlib

noinst_LIBRARIES = libpcre.a
AM_CFLAGS = -DHAVE_CONFIG_H

libpcre_a_SOURCES = \
config.h \
pcre.h \
pcre_chartables.c \
pcre_compile.c \
pcre_config.c \
pcre_dfa_exec.c \
pcre_exec.c \
pcre_fullinfo.c \
pcre_get.c \
pcre_globals.c \
pcre_info.c \
pcre_internal.h \
pcre_maketables.c \
pcre_newline.c \
pcre_ord2utf8.c \
pcre_refcount.c \
pcre_study.c \
pcre_tables.c \
pcre_try_flipped.c \
pcre_ucp_searchfuncs.c \
pcre_valid_utf8.c \
pcre_version.c \
pcre_xclass.c \
ucp.h \
ucpinternal.h \
ucptable.h

