INCLUDES += -I$(srcdir) -I$(srcdir)/../../../../dep/include -I$(srcdir)/../../../ascent-shared
INCLUDES += -I$(srcdir)/../../../ascent-world -I$(srcdir)/../../../../dep/src

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libAngelScriptScripting.la

libAngelScriptScripting_la_SOURCES = \
  angelscript/source/as_arrayobject.cpp \
  angelscript/source/as_builder.cpp  \
  angelscript/source/as_bytecode.cpp \
  angelscript/source/as_callfunc.cpp \
  angelscript/source/as_callfunc_mips.cpp \
  angelscript/source/as_callfunc_ppc.cpp \
  angelscript/source/as_callfunc_ppc_64.cpp \
  angelscript/source/as_callfunc_sh4.cpp \
  angelscript/source/as_callfunc_x86.cpp \
  angelscript/source/as_compiler.cpp \
  angelscript/source/as_context.cpp \
  angelscript/source/as_configgroup.cpp \
  angelscript/source/as_datatype.cpp \
  angelscript/source/as_generic.cpp \
  angelscript/source/as_memory.cpp \
  angelscript/source/as_module.cpp \
  angelscript/source/as_objecttype.cpp \
  angelscript/source/as_outputbuffer.cpp \
  angelscript/source/as_parser.cpp \
  angelscript/source/as_restore.cpp \
  angelscript/source/as_scriptcode.cpp \
  angelscript/source/as_scriptengine.cpp \
  angelscript/source/as_scriptfunction.cpp \
  angelscript/source/as_scriptnode.cpp \
  angelscript/source/as_scriptstruct.cpp \
  angelscript/source/as_string.cpp \
  angelscript/source/as_string_util.cpp \
  angelscript/source/as_thread.cpp \
  angelscript/source/as_tokenizer.cpp \
  angelscript/source/as_typeinfo.cpp \
  angelscript/source/as_variablescope.cpp \
  AngelScriptEngine.cpp \
  AngelScriptEngine.h \
  AngelScriptFunctions.h
