INCLUDES += -I$(srcdir) -I$(srcdir)/../../../../dep/include -I$(srcdir)/../../../shared
INCLUDES += -I$(srcdir)/../../../script -I$(srcdir)/../../../../src -I$(srcdir)/../../../game
INCLUDES += -I$(srcdir)/../../../logonserver -I$(srcdir)/../../../../dep/src/gm

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libInstanceScripts.la

libInstanceScripts_la_SOURCES = Instance_Deadmines.cpp \
Raid_BlackwingLair.cpp Raid_MoltenCore.cpp Raid_Naxxramas.cpp Raid_OnyxiasLair.cpp Raid_ZulGurub.cpp Setup.cpp