INCLUDES += -I$(srcdir) -I$(srcdir)/../../../../dep/include -I$(srcdir)/../../../shared
INCLUDES += -I$(srcdir)/../../../script -I$(srcdir)/../../../../src -I$(srcdir)/../../../game
INCLUDES += -I$(srcdir)/../../../logonserver -I$(srcdir)/../../../../dep/src/gm

AM_CXXFLAGS = -DSCRIPTLIB

lib_LTLIBRARIES = libServerStatusPlugin.la

libServerStatusPlugin_la_SOURCES = ServerStatusPlugin.cpp
